<resources>
    <string name="app_name">bigbigshop</string>
    <string name="title_home_name">BigBigShop</string>
    <string name="title_home">主頁</string>
    <string name="title_dashboard">商品分類</string>
    <string name="title_favorite">喜愛商品</string>
    <string name="title_shopping">購物車</string>
    <string name="title_account">帳戶/設定</string>
    <string name="title_account_name">我的檔案</string>
    <string name="title_food">講飲講食</string>
    <string name="title_cosmetics">護膚化妝</string>
    <string name="title_care">個人護理</string>
    <string name="title_clothing">個人護理</string>
    <string name="title_electronic">電子電器</string>
    <string name="title_digital">電子數碼</string>
    <string name="title_health">保健養生</string>
    <string name="title_tasteful">品味家居</string>
    <string name="title_sport">旅遊運動</string>
    <string name="title_kid">母嬰育兒</string>
    <string name="title_pet">寵物用品</string>
    <string name="title_stationary">文具精品</string>
    <string name="title_toy">玩具圖書</string>
    <string name="title_cook">炊藝樂廚</string>
    <string name="title_food_all">全部講飲講食</string>
    <string name="title_fresh">新鮮食品</string>
    <string name="title_cold">急凍食品</string>
    <string name="title_freeze">冷凍食品</string>
    <string name="title_festival">節慶食品</string>
    <string name="title_coupon">餐飲劵</string>
    <string name="title_alchol">酒精飲料</string>
    <string name="title_drink">飲料</string>
    <string name="title_driedseafood">海味乾貨</string>
    <string name="title_snack">零食 甜品</string>
    <string name="title_noodle">即食麵 麵 意粉</string>
    <string name="title_instant">即食食品</string>
    <string name="title_can">罐頭乾貨</string>
    <string name="title_rice">米 食油</string>
    <string name="title_sauce">調味 醬料</string>
    <string name="title_pickled">醃製食品</string>
    <string name="title_breakfast">早餐 果醬</string>
    <string name="title_organic">有機 健康食品</string>
    <string name="title_other">食品</string>
    <string name="title_fresh_all">全部新鮮食品</string>
    <string name="title_freshseafood">新鮮海鮮</string>
    <string name="title_fruit">水果</string>
    <string name="title_vegetable">蔬菜</string>
    <string name="title_freshseafood_all">全部新鮮海鮮</string>
    <string name="title_fish">魚類</string>
    <string name="title_fruit_all">全部水果</string>
    <string name="title_japan">優質日本水果</string>
    <string name="title_taiwan">優質台灣水果</string>
    <string name="title_grape">提子</string>
    <string name="title_watermelon">西瓜</string>
    <string name="title_fruitcate">瓜果類</string>
    <string name="title_vegetable_all">全部蔬菜</string>
    <string name="title_organicveg">有機蔬菜</string>
    <string name="title_localveg">本地蔬菜</string>
    <string name="title_melon">瓜果類</string>
    <string name="title_mushroom">菇菌類</string>
    <string name="title_soap">湯包</string>
    <string name="title_otherveg">其他蔬菜</string>
    <string name="title_next">下一步</string>
    <string name="title_pay">立即付款</string>

</resources>