<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bigbigshop.ui.home.HomeFragment"
        android:label="@string/title_home_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.bigbigshop.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bigbigshop.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.bigbigshop.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.bigbigshop.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bigbigshop.ui.account.AccountFragment"
        android:label="@string/title_account_name"
        tools:layout="@layout/fragment_account" />
</navigation>